--- a/style.css
+++ b/style.css
@@ -95,6 +95,9 @@ section h2 {
   border-radius: 50%;
   border: 3px solid #7f8cfa;
   margin-bottom: 1rem;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 /* Lists */
@@ -190,6 +193,7 @@ position: relative;
 }
 
 }
+
 
 
 
